# web3wallet-cli

./: Cargo.toml  README.md
.claude/: settings.local.json
scripts/: build_release.ps1
src/: config.rs  errors.rs  lib.rs  main.rs  utils.rs
src/models/: address.rs  command.rs  keystore.rs  mod.rs  wallet.rs
src/services/: crypto.rs  mnemonic.rs  mod.rs  walletmanager.rs
tests/: test_create_command.rs  test_derive_command.rs  test_import_command.rs  test_list_command.rs
