[package]
name = "web3wallet-cli"
version = "0.1.0"
edition = "2021"
authors = ["Frank"]
description = "A CLI tool for managing web3 wallets"
license = "MIT"

[[bin]]
name = "web3wallet"
path = "src/main.rs"

[dependencies]
ethers = {version = "2.0", features = ["ws", "rustls"]}
bip39 = "2.0"

#CLI framework
clap = { version = "4.0", features = ["derive", "cargo"] }

#cryptography
aes-gcm = "0.10"
argon2 = "0.5"
pbkdf2 = "0.12"
sha2 = "0.10"
hmac = "0.12"
zeroize = {version = "1.6", features = ["derive"]}
rand = "0.8"
hex = "0.4"
uuid = { version = "1.0", features = ["v4", "serde"] }

#async runtime
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rpassword = "7.0"

#error handling
thiserror = "1.0"
anyhow = "1.0"


#tools and utilities
dirs = "4.0"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.0"

